# MDFC

./: LICENSE  MDFC.py  README.md  pyproject.toml  requirements.txt
Depletion_exemple/: depletion_use_model.json
MDFC/Functions/Product/: symmetrisation.py
MDFC/Functions/embedding_fcts/: embedding_fct.py
MDFC/Functions/interaction/: __init__.py  interaction_blocks.py  sum_with_weights.py
MDFC/Functions/model_optimisation/: Loss.py  get_optimizer.py
MDFC/RUN/: run_one_data.py  run_training.py
MDFC/model/: MPCP_model.py  evaluate.py  take_steps.py  train_model.py
MDFC/tools/: LR_Scheduler.py  Wrappers.py  calculators.py  checkpoint.py  compile.py  config_tools.py  dataset.py  error_table.py  irreps_tools.py  logger.py  positions_to_edges.py  printing.py  torch_scatter.py  torch_tools.py  visualise_train.py
MDFC/tools/torch_geometric/: data.py
